# django-smartpath

./: .gitignore  Makefile  PUBLISHING_AND_TESTING_GUIDE.md  README.md
.github/workflows/: ci.yml
pip-library/: LICENSE  README.md  pyproject.toml  setup.py
pip-library/django_smartpath/: __init__.py  apps.py  cli.py  scanner.py
pip-library/django_smartpath/templatetags/: smartpath.py
pip-library/tests/: test_scanner.py
vscode-extension/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
